fix: improve beta label contrast in gamesxblock (#80)
* fix: improve beta label contrast in gamesxblock

* fix: address copilot comment


---------

--- a/cms/static/sass/elements/_modules.scss
+++ b/cms/static/sass/elements/_modules.scss
@@ -163,8 +163,8 @@
           display: inline-block;
 
           color: $uxpl-green-base;
-          background-color: theme-color("inverse");
-          border-color: theme-color("inverse");
+          background-color: $white;
+          border-color: $white;
           border-radius: 3px;
 
           font-size: 90%;
